--- a/tetris.html
+++ b/tetris.html
@@ -13,7 +13,7 @@
         </div>
 
         <div class = "sidebar">
-            <h2> TETRIX </h2>
+            <h2> TETRIS </h2>
 
             <div class = "scoreboard">
                 <h3> Score: 
