--- a/tetris.html
+++ b/tetris.html
@@ -2,18 +2,18 @@
 
 <head>
     <meta charset = "UTF-8">
-    <meta name = "Tetrix" content = "Trial">
-    <title> Tetrix </title>
+    <meta name = "Tetris" content = "Trial">
+    <title> Tetris </title>
 </head>
 
 <body onload = 'initialize();'>
     <div id = "bodybackground">
         <div class = "container">
-            <canvas id = "canvas" width = "200" height = "400"></canvas>
+            <canvas id = "canvas" width = "300" height = "600"></canvas>
         </div>
 
         <div class = "sidebar">
-            <h2> TETRIX </h2>
+            <h2> TETRIS </h2>
 
             <div class = "scoreboard">
                 <h3> Score: 
@@ -21,7 +21,7 @@
                 </h3>
             </div>
 
-            <p id = "timer"> Duration: 
+            <p> Duration: 
                 <timer id = "timer">00:00</timer>
             </p>
 
