--- a/tetris.html
+++ b/tetris.html
@@ -11,11 +11,11 @@
 <body onload = 'initialize();'>
     <div id = "bodybackground">
         <div class = "container">
-            <canvas id = "canvas" width = "200" height = "400"></canvas>
+            <canvas id = "canvas" width="300" height="600"></canvas>
         </div>
 
         <div class = "sidebar">
-            <h2> TETRIX </h2>
+            <h2> TETRIS </h2>
 
             <div class = "scoreboard">
                 <h3> Score: 
@@ -23,7 +23,9 @@
                 </h3>
             </div>
 
-            <p id = "timer"> Duration: 
+            <h4> Duration: </h4>
+
+            <p id = "timer">
                 <timer id = "timer">00:00</timer>
             </p>
 
