--- a/tetris.html
+++ b/tetris.html
@@ -4,6 +4,8 @@
     <meta charset = "UTF-8">
     <meta name = "Tetris" content = "Trial">
     <title> Tetris </title>
+        
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body onload = 'initialize();'>
@@ -27,7 +29,15 @@
 
             <script type = "text/javascript" src = "main.js"></script>
         </div>
+        
+        <div class = "leftbar">
+            <image src="source/Tetris_logo.png" width="400" height="277.5"></image>
+        </div>
+
     </div>  
+    <audio controls autoplay loop>
+        <source src="source/tetris_8bit_theme.mp3">
+    </audio> 
 </body>
 
 </html>
