--- a/tetris.html
+++ b/tetris.html
@@ -5,7 +5,7 @@
     <meta name = "Tetrix" content = "Trial">
     <title> Tetrix </title>
     
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="newstyle.css">
 </head>
 
 <body onload = 'drawMap();'>
