fix: move at the bottom

--- a/tetris.html
+++ b/tetris.html
@@ -16,8 +16,8 @@
 
         <div class = "sidebar">
             
-            <h3> Next Block:
-                <canvas id = "preview" width = "120" height = "120"></canvas>
+            <h3> Next Block: <br/>
+                <canvas id = "preview" width = "120" height = "180"></canvas>
             </h3>
 
             <div id="greetingMessage"></div>
