--- a/tetris.html
+++ b/tetris.html
@@ -40,6 +40,14 @@
 
         <div class = "leftbar">
             <image src="source/Tetris_logo.png" width="400" height="277.5"></image>
+            <br/>
+            <h2> Insturction: </h2>
+            <p id = "instruction">
+                <p>Press <strong>UP</strong> to rotate the block clockwise  </p>
+                <p>Press <strong>LEFT</strong> or RIGHT to move the block</p>  
+                <p>Press <strong>DOWN</strong> to speed up falling </p> 
+                <p>Press <strong>SPACE</strong> to pause the game </p>
+            </p>
         </div>
 
         <div id="audio">
